--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==3.1.3
 django-bootstrap3==14.2.0
 django-heroku==0.3.1
 django-registration==3.1.1
+gunicorn==20.0.4
 psycopg2==2.8.6
 python-decouple==3.3
 pytz==2020.4
